--- a/style.css
+++ b/style.css
@@ -329,8 +329,6 @@ img {
 .break {
     width: 100%;
     height: 220px;
-    background: url("assets/images/bg-footer.jpg") no-repeat center;
-    background-size: cover;
     text-align: center;
     padding-top: 40px;
 }
@@ -344,6 +342,8 @@ img {
     width: 100%;
     background:#000000;
     color:#FFFFFF;
+}
+.footer-container {
     padding: 20px 0;
 }
 
@@ -390,10 +390,11 @@ img {
     border-color: #FFFFFF;
 }
 
-copy {
+.copyright {
     width: 100%;
     background: #FEC63E;
     padding: 20px 0;
+    color: #000000;
 }
 
 .js [data-slide] {
