--- a/assets/css/products.css
+++ b/assets/css/products.css
@@ -1,5 +1,6 @@
 .products-group {
-    padding: 60px 0;
+    padding-top: 60px;
+    margin-top: 100px;
 }
 
 .products-group h2 {
@@ -64,6 +65,11 @@
 
 .products-info ul li:nth-child(even) {
     margin-left: 2px;
+}
+
+.product-inline {
+    margin-top: 40px;
+    padding-top: 0;
 }
 
 /* Budget */
